[package]
name = "neco"
version = "0.1.0"
authors = ["SyStem"]
edition = "2018"

[features]
default = ["INSECURE"]

SECURE = []
INSECURE = []

[[bin]]
name = "lsoc_neutron_communicator"
path = "src/main.rs"

[dependencies]
paho-mqtt = { path = "paho.mqtt.rust"}

log = "0.4.6"
env_logger = "0.6.1"

# Json serializaton/deserialization
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"

hyper = "0.12.25"
tokio-core = "0.1.17"
futures = "0.1.25"