[package]
name = "neco"
version = "0.1.0"
authors = ["SyStem"]
edition = "2018"

[features]
# INSECURE - Use plain HTTP for update downloading
# SECURE - Use HTTPS for update downloading
default = ["INSECURE"]

SECURE = []
INSECURE = []

[[bin]]
name = "neutron_communicator"
path = "src/main.rs"

[dependencies]
paho-mqtt = "0.6"

clap = "^2.33"

log = "^0.4"
env_logger = "^0.7"

serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

reqwest = "^0.9"

ring = "^0.16"
data-encoding = "^2.1"
rand = "^0.7"

fs_extra = "^1.1"
tempfile = "^3.1"

strum = "^0.17"
strum_macros = "^0.17"

lazy_static = "^1.4"

chrono = "^0.4"
